fix overflow-x

--- a/css/pencegahan.scss
+++ b/css/pencegahan.scss
@@ -145,7 +145,7 @@ h1:last-of-type {
         margin-top: 0px !important;
     }
 
-    ul li {
+    .pengertian ul li {
         height: auto !important;
 
         .icon {
